@@ -9,6 +9,7 @@ CHANGES IN CUPS V1.4.7
 	  STR #3755, STR #3769)
 	- Configure script fixes (STR #3659, STR #3691)
 	- Compilation fixes (STR #3718, STR #3771, STR #3774)
+	- The scheduler did not retry fax jobs properly.
 	- The scheduler now recognizes an empty cupsCommands PPD keyword as
 	  meaning that CUPS commands are not supported for a printer (STR #3773)
 	- Fixed a crash bug in the scheduler when the application/octet-stream
